# ft-tokenize

./: .gitattributes  .gitmodules  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  ft-tokenize.ipynb  pyproject.toml  status
.github/workflows/: build.yml
ft_tokenize/: __init__.py  ft_tokenize.cp313-win_amd64.pyd
src/: ft_tokenizer.cpp  tokenizer_model.cpp  tokenizer_model.hpp
